add vacacies form

--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -1,52 +1,21 @@
-<div class="container">
-    <div class="mb-50">
-        <h4 class="section-title2 pr-0">
-            <strong>Редактор новостей</strong>
-        </h4>
-        <div class="line-3-75">
-        </div>
+<div class="card text-center">
+    <div class="card-header">
+        <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="create-news">Добавить новость</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="review-news">Все новости</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="create-vacancies">Добавить вакансию</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="create">Disabled</a>
+            </li>
+        </ul>
     </div>
-    <app-create-news></app-create-news>
-</div>
-<div>
-    <div *ngIf="isShowAllNews">
-        <app-view-all-news></app-view-all-news>
-    </div>
-    <button class="btn" (click)="showAllNews()">Все новости</button>
-</div>
-<!-- Add News -->
-<div class="container-fluid">
-    <!-- <div class="form-group">
-        <label>Добавить новость</label>
-        <form [formGroup]="services.newsForm" (click)="onSubmit()">
-            <div class="form-group">
-                <label>Заголовок</label>
-                <label class="text-danger"
-                *ngif="services.newsForm.get('header')"
-                >120</label>
-                <input formControlName="header" class="form-control" type="text">
-            </div>
-        </form>
-    </div> -->
-</div>
-
-<div class="container-fluid">
-    <form [formGroup]="formTemplateDocument" (submit)="onSubmit(formTemplateDocument.value)"></form>
-    <div class="form-group">
-        <label>Имя документ</label>
-        <input placeholder="Имя документа" class="form-control" type="text" formControleName="name">
-        <label *ngIf="" class="text-danger">Обязательное поле</label>
-        <label *ngIf="" class="text-danger">Допустимая длина 100 символ</label>
-    </div>
-    <div class="form-group">
-        <label>Описание документ</label>
-        <textarea class="form-control" formControleName="discription"></textarea>
-    </div>
-    <div class="form-group">
-        <label>Добавить документ</label>
-        <input class="form-control" accept=".pdf" type="file" formControleName="documentUrl">
-    </div>
-    <div class="form-group">
-        <button type="submit">Добавить документ</button>
+    <div>
+        <router-outlet></router-outlet>
     </div>
 </div>
