--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,21 +1,21 @@
 <!-- Header -->
-<div class="container">
-    <div class="row">
-        <div class="mb-50">
-            <h2 class="section-title2 pr-0">
-                <strong>Продукция</strong>
-            </h2>
-            <div class="line-3-75">
+<!-- <div class="container"> -->
+    <!-- HeaderEnd -->
+    
+    <div class="container">
+        <div class="row">
+            <div class="mb-50">
+                <h2 class="section-title2 pr-0">
+                    <strong>Продукция</strong>
+                </h2>
+                <div class="line-3-75">
+                </div>
             </div>
         </div>
-    </div>
-    <!-- HeaderEnd -->
-
-    <div class="container">
         <div class="row">
             <div class="col-4">
                 <div id="titel-deport">
-                    <h5>Быстрый поиск</h5>
+                    <h5>Каталог</h5>
                     <div id="list-example" class="list-group">
                         <a class="list-group-item list-group-item-action" href="/product">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -54,5 +54,5 @@
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
 <img *ngIf="isShow" id="UpArrow" src="../../assets/images/gototop/up-arrow.png" (click)="gotoTop()">
