--- a/src/app/components/admin-panel/view-all-news/view-all-news.component.html
+++ b/src/app/components/admin-panel/view-all-news/view-all-news.component.html
@@ -4,13 +4,13 @@
         <th scope="col">#</th>
         <th scope="colgroup">Заголовок</th>
         <th scope="col">Описание</th>
-        <th scope="col">Дата публекации</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Дата публикации</th>
+        <th scope="col">Удалить</th>
       </tr>
     </thead>
     <tbody *ngFor="let news of listNews">
       <tr>
-        <th scope="row"></th>
+        <th scope="row">{{listNews.indexOf(news)+1}}</th>
         <td>{{news.header}}</td>
         <td>{{news.shortDescription}}</td>
         <td>{{news.dateTime | date}}</td>
