--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -11,23 +11,25 @@
 
 <!-- Searche -->
 <div class="container">
-
-    <p>Фильтр Новостей</p>
-    <!-- <input type="text" placeholder="Поиск">
-    <label> 
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-            viewBox="0 0 16 16">
-            <path
-                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-        </svg>
-    </label> -->
-
-    <label for="selecpicker">поиск</label>
-    <select class="mdb-select md-form">
-        <option>за год</option>
-        <option>за месяц</option>
-        <option>Relish</option>
-    </select>
+    <div class="input-group rounded">
+        <input type="search" class="form-control rounded" placeholder="Поиск" aria-label="Search"
+            aria-describedby="search-addon" />
+        <span class="input-group-text border-0" id="search-addon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                viewBox="0 0 16 16">
+                <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+            </svg>
+        </span>
+    </div>
+    <div>
+        <label for="selecpicker">поиск</label>
+        <select class="mdb-select md-form">
+            <option>за год</option>
+            <option>за месяц</option>
+            <option>Relish</option>
+        </select>
+    </div>
 </div>
 
 <!-- Loadr -->
@@ -43,9 +45,7 @@
         <div id="content-card" class="col-lg-4 col-md-6" *ngFor="let item of NewsList">
             <div class="card">
                 <a class="select-news" href="/news/{{item.id}}">
-                    <!-- //TODO: fix url -->
-                    <!-- <img class="card-img-top" src="{{item.imageUrl}}" alt="Новости"> -->
-                    <img class="card-img-top" src="../../../assets/images/test.jpg" alt="Новости">
+                    <img class="card-img-top" src="{{item.imageUrl}}" alt="Новости">
                 </a>
                 <div class="card-body">
                     <a class="select-news" href="/news/{{item.id}}">
