--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -9,3 +9,6 @@ a:hover {
     transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
+.mb-50{
+    margin-top: 10px;
+}
